manifests/api-service/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-service
  namespace: replit-app
  labels:
    name: api-service
spec:
  rules:
    - host: api-service.runner.local
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: api-service
                port:
                  number: 5000
